--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,8 @@
 <resources>
 
     <style name="Theme.Luna" parent="Theme.AppCompat.DayNight.NoActionBar" />
+
+    <style name="Theme.Luna.Dialog" parent="Theme.AppCompat.DayNight.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
 </resources>
